--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by venv; see https://docs.python.org/3/library/venv.html
 *
 !.gitignore
+!macos_sickle.py
 !src/
 src/*
 !src/transposonaligner/
