--- a/src/tnatlas/default.toml
+++ b/src/tnatlas/default.toml
@@ -5,7 +5,7 @@ sequencing_type = "sanger"
 
 [output]
 verbosity = 0
-outfile = "transposonaligner_results.csv"
+outfile = "tnatlas_results.csv"
 
 [fastqc]
 # path = fastqc
